# pigeon

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  build.rs  build.sh  package-lock.json  package.json  playwright.config.js  wrangler.toml
.github/workflows/: e2e.yml
migrations/: 0001_initial.sql  0002_add_image.sql
public/: app.js  crypto.js  index.html  keystore.js  manifest.json  style.css  sw.js
src/: db.rs  lib.rs  models.rs
src/durable/: topic.rs
src/routes/: mod.rs  poll.rs  publish.rs  push.rs  static_files.rs  subscribe.rs
src/webpush/: encrypt.rs  mod.rs  vapid.rs
tests/e2e/: smoke.spec.js  xss.spec.js
