[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

# Web Push crypto (all WASM-compatible)
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
